--- a/application/views/nuevo oc.html
+++ b/application/views/nuevo oc.html
@@ -65,13 +65,15 @@
         <td>Usuario</td>
       </tr>
       <tr>
-        <td>Enviar Consulta</td>
+      	<td>Enviar Consulta</td>
         <td>42</td>
         <td>06/09/2011</td>
         <td>APROBADA</td>
         <td>1-5049-2011</td>
         <td>MANTENIMIENTO - CASA CENTRAL</td>
-        <td>AYUP CYNTHIA INES</td>
+        <td>AYUP CYNTHIA INES</td></a>
+        
+      
       </tr>
       <tr>
         <td>Enviar Consulta</td>
