--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,9 +4,9 @@
    Author:
    ========================================================================== */
 
-
-
-
+table thead {
+  background-color: #eee;
+}
 
 
 
